Renamed the extension

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "minimalism",
-	"displayName": "minimalism",
+	"name": "minimalism-themes",
+	"displayName": "Minimalism Themes",
 	"description": "Minimalist themes by Máté.",
 	"version": "1.0.0",
 	"engines": {
